test-cases/negative/test_053_if_without_body.lay
# negative test: if statement without body
# expected: parser should reject this

if true then


